--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -241,7 +241,7 @@
 }
 
 // Kittens section
-.kittens-landing, .cattery-overview, .kittens-index, .other-kittens, .catteries-index, #cattery-view {
+.kittens-landing, .cattery-overview, .kittens-index, .other-kittens, .catteries-index, #cattery-view, .breed-show {
   .card {
     transition: ease-in-out 0.2s;
 
