--- a/app/javascript/stylesheets/modules/show.scss
+++ b/app/javascript/stylesheets/modules/show.scss
@@ -296,3 +296,139 @@
     padding-right: 5px;
   }
 }
+
+// Breed show page
+.breed-show {
+  img, .paragraph-block, .disclaimer-block {
+    border-radius: 10px;
+  }
+
+  .breed-image {
+    width: 100%;
+    text-align: center;
+  }
+
+  img {
+    width: 80%;
+    margin: 0 auto;
+
+    @include small-and-down {
+      width: 100%;
+    }
+  }
+
+  .breed-property {
+    margin: 10px auto;
+
+    @include medium-and-down {
+      text-align: center;
+      margin: 25px auto;
+    }
+  }
+
+  .range-title {
+    display: block;
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 15px;
+
+    @include medium-only {
+      text-align: right;
+      font-size: 1.5em;
+      margin-right: 5px;
+    }
+
+    @include small-and-down {
+      font-size: 1.5em;
+    }
+  }
+
+  .range-dots{
+    $dot-size: 2.3rem;
+    
+    @include medium-only {
+      display: block;
+      text-align: left;
+    }
+
+    @include small-and-down {
+      $dot-size: 2.1rem;
+    }
+
+    i {
+      background-color: $primaryShade2;
+      height: $dot-size;
+      width: $dot-size;
+      border-radius: 50%;
+      margin: 0px 5px;
+      display: inline-block;
+      box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);;
+    }
+    
+    i.active {
+      background-color: $primaryColor;
+    }
+  }
+
+  .paragraph-block, .disclaimer-block {
+    font-size: 1.2em;
+    background-color: $white;
+    padding: 30px;
+    margin: 5rem auto;
+
+    h1 {
+      margin-top: 0px;
+
+      @include small-and-down {
+        font-size: 2.3em;
+      }
+    }
+    
+    .text-box {
+      position: relative;
+      overflow: hidden;
+    }
+
+    p {
+      letter-spacing: 0.5px;
+      line-height: 30px;
+      padding: 15px 0px;
+
+      @include small-and-down {
+        text-align: start;
+        word-wrap: break-word;
+        letter-spacing: 1px;
+      }
+    }
+
+    .truncation-link {
+      cursor: pointer;
+      font-size: 1.1em;
+      font-weight: bold;
+      color: $primaryColor;
+      transition: 0.2s ease-in-out ;
+
+      position: absolute; 
+      bottom: 0; 
+      left: 0;
+      width: 100%; 
+      margin: 0;
+      
+      
+      /* "transparent" only works here because == rgba(0,0,0,0) */
+      background-image: linear-gradient(to bottom, transparent, $white);
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    .more {
+      padding-top: 100px; 
+    }
+
+    .less {
+      bottom: -5px;
+    }
+  }
+}
