--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,6 +113,7 @@
             <ul>
               <li><a class="grey-text text-lighten-3" href="#!">Terms of service</a></li>
               <li><a class="grey-text text-lighten-3" href="#!">Privacy policy</a></li>
+              <li><a target="_blank" href="https://icons8.com/icons/set/cat--v3"><a target="_blank" class="grey-text text-lighten-3" href="https://icons8.com">Icons8</a></li>
             </ul>
           </div>
         </div>
