--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,3 +1,6 @@
+<!-- Page specific meta data -->
+<% content_for :meta_title, "#{DEFAULT_META["meta_title"]} | Kittens" %>
+
 <div class="kittens-index">
   <h1>Kittens</h1>
 
