--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="section home-landing">
     <div class="row">
       <div class="col l5 hide-on-med-and-down">
-        <%= image_tag("undraw_Playful_cat_rchv.svg", :alt => "cat", class:"image-m") %>
+        <%= image_tag("undraw_cat_image_1.svg", :alt => "cat", class:"image-m") %>
       </div>
       <div class="col l6 m12 offset-l1 search-landing">
           <h1>Find your cat!</h1>
