--- a/app/javascript/stylesheets/base/base.scss
+++ b/app/javascript/stylesheets/base/base.scss
@@ -6,7 +6,7 @@
 
 body {
   background-color: $canvasColor;
-  font-family: "Source Sans Pro";
+  font-family: "Source Sans Pro", sans-serif !important;
   width: 100%;
 }
 
