--- a/app/javascript/stylesheets/modules/header.scss
+++ b/app/javascript/stylesheets/modules/header.scss
@@ -6,10 +6,10 @@ header {
       right: 10px;
     }
   }
-  .material-icons {
+  .arrow-icon {
     position: absolute;
-    right: 8px;
-    top: 0px;
+    right: -30px;
+    bottom: -20px;
   }
 
   .dropdown-content {
