--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -327,11 +327,8 @@
     text-align: center;
   }
 
-  .material-icons {
-    transform: scale(1.3);
-  }
-
-  .fas {
-    margin-left: 10px;
+  .fa-cat {
+    transform: scale(1.6);
+    margin-left: 15px;
   }
 }
