--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="fontawesome-i2svg-pending">
   <head>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -29,7 +29,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/25b3ebb045.js" crossorigin="anonymous"></script>
+
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -50,26 +50,44 @@
             </div>
 
             <ul class="right hide-on-med-and-down">
-              <li><%= link_to "Breeds", breeds_path %></li>
-              <li><%= link_to "Catteries", catteries_path %></li>
-              <li><%= link_to "Kittens", cats_path %></li>
+
+              <li><%= link_to t('header.breeds'), breeds_path %></li>
+              <li><%= link_to t('header.catteries'), catteries_path %></li>
+              <li><%= link_to t('header.kittens'), cats_path %></li>
               <% if !user_signed_in? %>
-                <li><%= link_to "Login", new_user_session_path %></li>
+                <li><%= link_to t('header.login'), new_user_session_path %></li>
               <% else %>
                 <li>
-                  <a class="nav-dropdown-trigger" data-target='dropdown1'>
-                    <span>Account</span>
-                    <i class="material-icons">arrow_drop_down</i>
+                  <a class="nav-dropdown-trigger" data-target="dropdown1">
+                    <span>
+                      Account
+                      <i class="material-icons arrow-icon">arrow_drop_down</i>
+                    </span>
                   </a>
                 </li>
-                <ul id='dropdown1' class='dropdown-content'>
+                <ul id="dropdown1" class="dropdown-content">
                   <% if user_signed_in? && current_user.is_cattery %>
-                    <li><%= link_to "My Cattery", my_cattery_cattery_path(@user) %></li>
+                    <li><%= link_to t('header.my_cattery'), my_cattery_cattery_path(@user) %></li>
                   <% end %>
-                  <li><%= link_to "Profile", edit_user_registration_path %></li>
-                  <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+                  <li><%= link_to t('header.profile'), edit_user_registration_path %></li>
+                  <li><%= link_to t('header.logout'), destroy_user_session_path, method: :delete %></li>
                 </ul>
               <% end %>
+              <li>
+                <a class="nav-dropdown-trigger" data-target="dropdown2">
+                  <span>
+                    <%= I18n.locale.upcase %>
+                    <i class="material-icons arrow-icon">arrow_drop_down</i>
+                  </span>
+                </a>
+              </li>
+              <ul id="dropdown2" class="dropdown-content">
+                <% I18n.available_locales.each do |lang| %>
+                  <% unless lang == I18n.locale %>
+                    <li><%= link_to t("languages.#{lang}"), url_for(locale: lang) %></li>
+                  <% end %>
+                <% end %>
+              </ul>
             </ul>
           </div>
         </nav>
@@ -81,19 +99,26 @@
                 <%= image_tag("logo_2.svg", :alt => "logo") %>
                 <div>Cat Linker</div>
           <% end %>
-          <li><%= link_to "Breeds", breeds_path %></li>
-          <li><%= link_to "Catteries", catteries_path %></li>
-          <li><%= link_to "Kittens", cats_path %></li>
+          <li><%= link_to t('header.breeds'), breeds_path %></li>
+          <li><%= link_to t('header.catteries'), catteries_path %></li>
+          <li><%= link_to t('header.kittens'), cats_path %></li>
           <% if !user_signed_in? %>
-            <li><%= link_to "Login", new_user_session_path %></li>
+            <li><%= link_to t('header.login'), new_user_session_path %></li>
           <% else %>
             <li><div class="divider"></div></li>
-            <li><a class="subheader">Account</a></li>
+            <li><a class="subheader"><%= t('header.account') %></a></li>
             <% if user_signed_in? && current_user.is_cattery %>
-              <li><%= link_to "My Cattery", my_cattery_cattery_path(@user), class:"subitem" %></li>
+              <li><%= link_to t('header.my_cattery'), my_cattery_cattery_path(@user), class:"subitem" %></li>
             <% end %>
-            <li><%= link_to "Profile", edit_user_registration_path, class:"subitem" %></li>
-            <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class:"subitem" %></li>
+            <li><%= link_to t('header.profile'), edit_user_registration_path, class:"subitem" %></li>
+            <li><%= link_to t('header.logout'), destroy_user_session_path, method: :delete, class:"subitem" %></li>
+          <% end %>
+          <li><div class="divider"></div></li>
+          <li><a class="subheader"><%= t('header.change_language') %></a></li>
+          <% I18n.available_locales.each do |lang| %>
+            <% unless lang == I18n.locale %>
+              <li><%= link_to t("languages.#{lang}"), url_for(locale: lang), class:"subitem" %></li>
+            <% end %>
           <% end %>
         </ul>
       </div>
@@ -122,17 +147,18 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="footer-title white-text">Support</h5>
+            <h5 class="footer-title white-text"><%= t('footer.support') %></h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Help</a></li>
-              <li><%= link_to "Contact", contact_home_path(@support), class:"grey-text text-lighten-3" %></li>
+              <li><a class="grey-text text-lighten-3" href="#!"><%= t('footer.help') %></a></li>
+              <li><%= link_to t('footer.contact'), contact_home_path(@support), class:"grey-text text-lighten-3" %></li>
             </ul>
           </div>
           <div class="col l6 s12">
-            <h5 class="footer-title white-text">Information</h5>
+            <h5 class="footer-title white-text"><%= t('footer.information') %></h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Terms of service</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Privacy policy</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!"><%= t('footer.terms_of_service') %></a></li>
+              <li><a class="grey-text text-lighten-3" href="#!"><%= t('footer.privacy_policy') %></a></li>
+              <li><a class="grey-text text-lighten-3" href="#!"><%= t('footer.cookies_policy') %></a></li>
               <li><a target="_blank" href="https://icons8.com/icons/set/cat--v3"><a target="_blank" class="grey-text text-lighten-3" href="https://icons8.com">Icons8</a></li>
             </ul>
           </div>
